Boilerplate code added to css files for font, margin, padding

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link href="./resources/css/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <header>
+        <h1>Jordan Thomas</h1>
+        <h2>Web Development Portfolio</h2>
+        <nav>
+
+        </nav>
+    </header>
 </body>
 </html>
