--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan's Portfolio</title>
+    <link rel="stylesheet" href="./resources/css/common.css" type="text/css">
     <link href="./resources/css/contact.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+
 </body>
 </html>
