--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan's Portfolio</title>
-    <link href="./resources/css/index.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./resources/css/common.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
 </head>
 <body>
     <header>
         <h1>Jordan Thomas</h1>
         <h2>Web Development Portfolio</h2>
         <nav>
-
+            <ul class="nav-items">
+                <li class="nav-item"><a href="index.html">Home</a></li>
+                <li class="nav-item"><a href="projects.html">Projects</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 </body>
