Header added to all pages with styling applied

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,18 @@
     <link href="./resources/css/contact.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+    <header>
+        <div class="headings">
+        <h1 class="main-heading">Jordan Thomas</h1>
+        <h2 class="sub-main-heading">Web Development Portfolio</h2>
+        </div>
+        <nav>
+            <ul class="nav-items">
+                <li class="nav-item"><a href="index.html">Home</a></li>
+                <li class="nav-item"><a href="projects.html">Projects</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
