--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <header>
-        <h1>Jordan Thomas</h1>
-        <h2>Web Development Portfolio</h2>
+        <div class="headings">
+        <h1 class="main-heading">Jordan Thomas</h1>
+        <h2 class="sub-main-heading">Web Development Portfolio</h2>
+        </div>
         <nav>
             <ul class="nav-items">
                 <li class="nav-item"><a href="index.html">Home</a></li>
