--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
             </ul>
         </nav>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
