Updated footer and media queries

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
     </main>
     <footer>
-        
+        <div class="footer-box">
+            <p>Jordan Thomas BEng (Hons)</p>
+            <p>Full Stack Developer</p>
+        </div>
     </footer>
 </body>
 </html>
