Added portfolio image and set up positioning

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         </nav>
     </header>
     <main>
+        <section id="JT-info">
+            <div id="JT-image-container">
+                <img src="./resources/images/Me.jpg" alt="Jordan Thomas" id="JT-image">
+            </div>
+            <div id="JT-about-container">
 
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-box">
