Updated info, adjusted image scaling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
                 <img src="./resources/images/Me.jpg" alt="Jordan Thomas" id="JT-image">
             </div>
             <div id="JT-about-container">
-
+                <p>Hi! I'm Jordan, and I'm an aspiring full stack developer. 
+                    My professional background is in the automotive industry, 
+                    specifically automating CAD software, developing coded solutions 
+                    to engineering problems and investigating new technologies. <br><br>
+                    I'm a self taught developer with regards to web development, and 
+                    have gained my experience developing website for businesses owned and run
+                    by friends and family.<br><br>
+                    Here I will be showcasing some of my work.
+                </p>
             </div>
         </section>
     </main>
