--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <img src="./resources/images/Me.jpg" alt="Jordan Thomas" id="JT-image">
             </div>
             <div id="JT-about-container">
+                <h2>About Me</h2><br>
                 <p>Hi! I'm Jordan, and I'm an aspiring full stack developer. 
                     My professional background is in the automotive industry, 
                     specifically automating CAD software, developing coded solutions 
@@ -35,7 +36,7 @@
                     I'm a self taught developer with regards to web development, and 
                     have gained my experience developing website for businesses owned and run
                     by friends and family.<br><br>
-                    Here I will be showcasing some of my work.
+                    Here, I will be showcasing some of my work.
                 </p>
             </div>
         </section>
