--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     specifically automating CAD software, developing coded solutions 
                     to engineering problems and investigating new technologies. <br><br>
                     I'm a self taught developer with regards to web development, and 
-                    have gained my experience developing website for businesses owned and run
+                    have gained my experience developing websites for businesses owned and run
                     by friends and family.<br><br>
                     Here, I will be showcasing some of my work.
                 </p>
