--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan's Portfolio</title>
+    <script src="https://kit.fontawesome.com/f05dc9b1e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./resources/css/common.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
 </head>
@@ -38,6 +39,21 @@
                     by friends and family.<br><br>
                     Here, I will be showcasing some of my work.
                 </p>
+            </div>
+        </section>
+        <section id="best-projects">
+            
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <div id="skills-container">
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-js-square"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-git-alt"></i>
+                <i class="fa-brands fa-node"></i>
+                <i class="fa-brands fa-chrome"></i>
             </div>
         </section>
     </main>
