Updated skill icon positioning for smaller screen size

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
         </section>
         <section id="skills">
-            <h2>Skills</h2>
+            <h2 id="skills-title">Skills</h2>
             <div id="skills-container">
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3-alt"></i>
