Added skill coloring and links

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <section id="skills">
             <h2 id="skills-title">Skills</h2>
             <div id="skills-container">
-                <i class="fa-brands fa-html5"></i>
-                <i class="fa-brands fa-css3-alt"></i>
-                <i class="fa-brands fa-js-square"></i>
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-git-alt"></i>
-                <i class="fa-brands fa-node"></i>
-                <i class="fa-brands fa-chrome"></i>
+                <a href="https://developer.mozilla.org/en-US/docs/Glossary/HTML5" target="_blank"><i class="fa-brands fa-html5"></i></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank"><i class="fa-brands fa-css3-alt"></i></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><i class="fa-brands fa-js-square"></i></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/GitHub" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/GitHub" target="_blank"><i class="fa-brands fa-git-alt"></i></a>
+                <a href="https://nodejs.org/en/about/" target="_blank"><i class="fa-brands fa-node"></i></a>
+                <a href="https://developer.chrome.com/docs/devtools/" target="_blank"><i class="fa-brands fa-chrome"></i></a>
             </div>
         </section>
     </main>
