Add top projects options and initial values for testing

--- a/index.html
+++ b/index.html
@@ -42,7 +42,29 @@
             </div>
         </section>
         <section id="best-projects">
-            
+                <div id="best-project-names">
+                    <h2 id="best-projects-title">Top Projects</h2>
+                    <ul>
+                        <li class="best-project-title"><a href="#">Project 1</a></li>
+                        <li class="best-project-title"><a href="#">Project 2</a></li>
+                        <li class="best-project-title"><a href="#">Project 3</a></li>
+                    </ul>
+                </div>
+                <div id="best-project-display">
+                    <div id="best-project-display-left">
+                        <h3 id="best-project-display-title">Project 1</h3>
+                        <div id="best-project-img-container">
+                            <img id="best-project-display-img" src="./resources/images/project1.jpg" alt="Project 1 image">
+                        </div>
+                    </div>
+                    <div id="best-project-display-right">
+                        <p>
+                            This is a test paragraph. This is a test paragraph. This is a test paragraph. 
+                            This is a test paragraph. This is a test paragraph. This is a test paragraph. 
+                            This is a test paragraph. This is a test paragraph. This is a test paragraph. 
+                        </p>
+                    </div>
+            </div>
         </section>
         <section id="skills">
             <h2 id="skills-title">Skills</h2>
