Updated top project display area for different screen sizes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div id="best-project-display-right">
-                        <p>
+                        <p id="best-project-display-desc">
                             This is a test paragraph. This is a test paragraph. This is a test paragraph. 
                             This is a test paragraph. This is a test paragraph. This is a test paragraph. 
                             This is a test paragraph. This is a test paragraph. This is a test paragraph. 
