--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan's Portfolio</title>
     <script src="https://kit.fontawesome.com/f05dc9b1e8.js" crossorigin="anonymous"></script>
+    <script src="./resources/javascript/index.js" async></script>
     <link rel="stylesheet" href="./resources/css/common.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
 </head>
@@ -45,23 +46,20 @@
                 <div id="best-project-names">
                     <h2 id="best-projects-title">Top Projects</h2>
                     <ul>
-                        <li class="best-project-title"><a href="#">Project 1</a></li>
-                        <li class="best-project-title"><a href="#">Project 2</a></li>
-                        <li class="best-project-title"><a href="#">Project 3</a></li>
+                        <li onclick="topProjectChange(event)" class="best-project-title">Project 1</li>
+                        <li onclick="topProjectChange(event)" class="best-project-title">Project 2</li>
+                        <li onclick="topProjectChange(event)" class="best-project-title">Project 3</li>
                     </ul>
                 </div>
                 <div id="best-project-display">
                     <div id="best-project-display-left">
-                        <h3 id="best-project-display-title">Project 1</h3>
+                        <h3 id="best-project-display-title"></h3>
                         <div id="best-project-img-container">
-                            <img id="best-project-display-img" src="./resources/images/project1.jpg" alt="Project 1 image">
+                            <img id="best-project-display-img" src="" alt="">
                         </div>
                     </div>
                     <div id="best-project-display-right">
                         <p id="best-project-display-desc">
-                            This is a test paragraph. This is a test paragraph. This is a test paragraph. 
-                            This is a test paragraph. This is a test paragraph. This is a test paragraph. 
-                            This is a test paragraph. This is a test paragraph. This is a test paragraph. 
                         </p>
                     </div>
             </div>
