--- a/projects.html
+++ b/projects.html
@@ -22,5 +22,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        <div class="footer-box">
+            <p>Jordan Thomas BEng (Hons)</p>
+            <p>Full Stack Developer</p>
+        </div>
+    </footer>
 </body>
 </html>
