Added content and media queries for projects page

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,38 @@
         </nav>
     </header>
     <main>
-
+        <div id="projects">
+            <div class="left project">
+                <div class="img-container">
+                    <img src="./resources/images/project1.jpg" alt="Project 1 Image">
+                </div>
+                <div class="text-container">
+                    <h2>Project 1</h2>
+                    <p>This is a description for the first project I created. Apparently this
+                        one is about an astronaut on the moon...</p>
+                </div>
+            </div>
+            <div class="right project">
+                <div class="img-container">
+                    <img src="./resources/images/project2.jpg" alt="Project 2 Image">
+                </div>
+                <div class="text-container">
+                    <h2>Project 2</h2>
+                    <p>This is a description for the second project I created. This
+                        one is a bit more futuristic in a random city... maybe about a game?</p>
+                </div>
+            </div>
+            <div class="left project">
+                <div class="img-container">
+                    <img src="./resources/images/project3.jpg" alt="Project 3 Image">
+                </div>
+                <div class="text-container">
+                    <h2>Project 3</h2>
+                    <p>This is a description for the third project I created. This
+                        one has a nice car, maybe a dealership website... or another game.</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-box">
