--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan's Portfolio</title>
     <script src="https://kit.fontawesome.com/f05dc9b1e8.js" crossorigin="anonymous"></script>
-    <script src="./resources/javascript/index.js" async></script>
+    <script src="./resources/javascript/index.js" defer></script>
     <link rel="stylesheet" href="./resources/css/common.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
 </head>
