Add return false to onsubmit of form to try avoid 405 error

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         </section>
         <section id="contact-form">
             <p class="contact-sub-title">You can also use the form below to send any queries!</p>
-            <form method="POST" id="form-container">
+            <form onsubmit="return false" method="POST" id="form-container">
                 <section id="form-names">
                     <div class="input-pair">
                         <label class="label" for="first-name">First Name</label>
